--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ footer {
     color: white;
 }
 a.foo:hover {
-  text-decoration-color: greenyellow;
+  text-decoration-color: grey;
   color: black;
 }
 a.foo {
